k8s/base/services/media/prowlarr/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prownlarr
  namespace: media
spec:
  selector:
    matchLabels:
      app: prownlarr
  template:
    metadata:
      labels:
        app: prownlarr
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: kubernetes.io/hostname
                operator: In
                values:
                - homeserver-2
      containers:
        - name: prownlarr
          image: linuxserver/prowlarr:2.0.5
          ports:
            - containerPort: 9696
              name: webui
          volumeMounts:
            - name: config
              mountPath: /config
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: prownlarr-config
      restartPolicy: Always
