k8s/base/services/media/prowlarr/service.yml
apiVersion: v1
kind: Service
metadata:
  name: prownlarr
  namespace: media
spec:
  ports:
    - port: 9696
      targetPort: 9696
      name: webui
  selector:
    app: prownlarr
