k8s/base/services/media/prowlarr/ingress.yml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: prownlarr
  namespace: media
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - match: Host(`prownlarr.lffl.internal`)
      kind: Rule
      services:
        - name: prownlarr
          port: 9696
      middlewares:
        - name: keycloak-forward-auth
          namespace: forward-auth
